[package]
name = "peerban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.3", default-features = false, features = ["json"] }
anyhow = "1.0.82"
serde_json = "1.0.115"
lazy_static = "1.4.0"
env_logger = "0.11.3"
log = "0.4.21"
async-trait = "0.1.79"
clap = { version = "4.5.4", features = ["derive", "env"] }
regex = "1.10.4"

[profile.opt]
inherits = "release"
strip = true
lto = true
